--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Todo application for Mindbox"
-    />
-    <title>Mindbox Todo App</title>
+    <meta name="description" content="Приложение для управления задачами" />
+    <title>Список задач</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Для работы приложения необходим JavaScript</noscript>
     <div id="root"></div>
   </body>
 </html>
